Small refactor to fix bug of not centered text

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,4 +1,5 @@
 .about-section{
+    text-align: center;
 }
 #about-intro{
     text-align: center;
@@ -10,6 +11,7 @@
 
 }
 #about-name{
+    text-align: center;
     color: #2978b5;
     font-size: 45pt;
     font-weight: 1200;
@@ -28,7 +30,6 @@
     font-family: 'Poppins', sans-serif;
     white-space: pre-line;
     /* padding: 10px; */
-    text-align: left;
 }
 
 .about-buttons a{
